[project]
name = "breef-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "gspread==6.0.2",
    "gspread-asyncio==2.0.0",
    "loguru>=0.7.3",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "ruff>=0.14.8",
    "urllib3>=2.5.0",
]

[tool.ruff]
target-version = "py311"
fix = true
[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    ".github",
    ".dockerignore",
    ".gitignore",
    "passwords.py",
    "LICENSE",
    "loggs.log",
    "pidor-of-the-day-af3dd140b860.json",
    "pyproject.toml",
    "uv.lock"
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["breef_bot"]

[tool.mypy]
mypy_path = "breef_bot"
strict = true  # Включает строгую проверку типов
ignore_missing_imports = true  # Не проверять сторонние библиотеки
warn_unused_ignores = true  # Предупреждать об игнорируемых аннотациях
warn_redundant_casts = true  # Предупреждать о ненужных `cast()`
disallow_untyped_defs = true  # Запрещает функции без аннотации типов

[tool.pytest.ini_options]
asyncio_mode = "auto"  # Позволяет тестировать асинхронные функции
testpaths = ["tests"]  # Указываем, где искать тесты
python_files = ["test_*.py"]  # Указываем, какие файлы считаются тестами
python_classes = ["Test*"]  # Классы, которые pytest воспринимает как тестовые
python_functions = ["test_*"]  # Функции, которые pytest будет запускать
#addopts = "--strict-markers --tb=short --disable-warnings"  # Убираем лишние ворнинги
asyncio_default_fixture_loop_scope = "function" # Цикл событий создаётся заново для каждого теста. Это безопасный вариант, избегающий влияния тестов друг на друга.

markers = [
    "slow: помечает тесты, которые работают медленно",
    "db: тесты, связанные с базой данных",
    "api: тесты, проверяющие API",
    "asyncio: mark test to run with asyncio event loop"

]
